# colibry

./: .gitignore  Dockerfile  Dockerfile-armv6  Dockerfile-armv7  README.md  app.py  metadata.db  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
calibre/: calibre.py  extract.py  filter.py
calibre-python/: pyproject.toml
calibre-python/src/calibre/: __init__.py  calibre.py  calibre_library.py  calibre_sql.py  calibredb.py  converters.py  errors.py  extract.py  filter.py  library.py  metadata_db.py  objects.py  search_params.py  sql_aggregators.py
calibre-python/src/calibre/empty_library/: metadata.db
calibre-python/src/calibre/filters/: __init__.py  filter.py
calibre-python/tests/: conftest.py  test_calibre_library.py  test_library.py  test_library_add.py  test_library_clone.py  test_library_list.py  test_metadata_db.py
dashboard/: app.py  app_config.py  pyproject.toml
dashboard/assets/: custom.css
dashboard/core/: download.py
dashboard/pages/: book.py  home.py  upload.py
data/ebooks/: daudet_ernest_jean_le_gueux.epub  eluard_la_vie_immediate.epub  malot_la_petite_soeur.epub  pidansat_de_mairobert_brossin_de_mere_madame_du_barry.epub
pages/: book.py  home.py
scripts/: update_requirements.sh
